--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -23,6 +23,7 @@ body.active_admin {
       background: #63b8ff;
     }
 
+    &.eth,
     &.dark-blue {
       background: #001f3f;
     }
@@ -76,6 +77,7 @@ body.active_admin {
       background: #fdd466;
     }
 
+    &.compromised,
     &.light-red {
       background: #e08f86;
     }
@@ -85,6 +87,9 @@ body.active_admin {
       background: #b32a1a;
     }
 
+    &.active,
+    &.completed,
+    &.confirmed,
     &.light-green,
     &.verified,
     &.processed,
@@ -104,10 +109,13 @@ body.active_admin {
     }
 
     &.binance,
+    &.bnb,
     &.registered {
       background: #fdd466;
     }
 
+    &.trx,
+    &.ton,
     &.absorb,
     &.stopped,
     &.buried,
@@ -115,6 +123,7 @@ body.active_admin {
       background: #a1a1a1;
     }
 
+    &.sol,
     &.filled,
     &.posted,
     &.positive,
