Add Balance Lock and Operation Management in ActiveAdmin
- Introduced `BalanceLock` and `BalanceLockOperation` models to manage user balance locks and their operations.
- Created ActiveAdmin interfaces for managing balance locks and operations, including index and show views with relevant filters and actions.
- Implemented Kafka integration for balance lock events, ensuring proper handling of lock and release operations.
- Added necessary validations and associations in the models to maintain data integrity.
- Updated the schema to include new tables and fields for balance locks and operations.
- Enhanced test coverage for the new functionality, including model validations and ActiveAdmin interfaces.

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -78,6 +78,8 @@ body.active_admin {
     }
 
     &.compromised,
+    &.locked,
+    &.lock,
     &.light-red {
       background: #e08f86;
     }
@@ -89,6 +91,9 @@ body.active_admin {
 
     &.active,
     &.completed,
+    &.released,
+    &.release,
+    &.usdt,
     &.confirmed,
     &.light-green,
     &.verified,
@@ -126,8 +131,7 @@ body.active_admin {
     &.sol,
     &.filled,
     &.posted,
-    &.positive,
-    &.locked {
+    &.positive {
       background: #8daa92;
     }
 
