--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -11,6 +11,7 @@
 @import "active_admin/mixins";
 @import "active_admin/base";
 @import "active_admin/image_modal";
+@import "active_admin/trade_confirm";
 
 // Overriding any non-variable Sass must be done after the fact.
 // For example, to change the default status-tag color:
