Allow admin to update User as snowfox_employee

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -12,6 +12,7 @@
 @import "active_admin/base";
 @import "active_admin/image_modal";
 @import "active_admin/trade_confirm";
+@import "active_admin/inline_edit";
 
 // Overriding any non-variable Sass must be done after the fact.
 // For example, to change the default status-tag color:
